--- a/refs.bib
+++ b/refs.bib
@@ -578,6 +578,15 @@
     volume = {161},
     doi = {10.1016/j.dam.2013.07.003}
 }
+@article{gonz18,
+    title = {{Metric-locating-dominating sets of graphs for constructing related subsets of vertices}},
+    author = {A. Gonz\'alez and C. Hernando and M. Mora},
+    journal = {{Applied Mathematics and Computation}},
+    year = {2018},
+    pages = {449--456},
+    volume = {332},
+    doi = {10.1016/j.amc.2018.03.053}
+}
 @article{fouc15,
     title = {{Decision and approximation complexity for identifying codes and locating-dominating sets in restricted graph classes}},
     author = {F. Foucaud},
@@ -671,6 +680,16 @@
     pages = {133--134},
     address = {Bordeaux, France},
     doi = {10.11650/tjm.19.2015.4816}
+}
+@article{fouc17q,
+    title = {{Parameterized and approximation complexity of the detection pair problem in graphs}},
+    author = {F. Foucaud and R. Klasing},
+    journal = {{Journal of Graph Algorithms and Applications}},
+    year = {2017},
+    pages = {1039--1056},
+    volume = {21},
+    number = {6},
+    doi = {10.7155/jgaa.00449}
 }
 @article{lai15,
     title = {{Paths and cycles identifying vertices in twisted cubes}},
@@ -825,6 +844,15 @@
     number = {1},
     doi = {10.1016/j.disc.2018.10.002}
 }
+@article{laih05b,
+    title = {{On optimal edge-robust and vertex-robust $(1,\leq\ell)$-identifying codes}},
+    author = {T. Laihonen},
+    journal = {{SIAM Journal on Discrete Mathematics}},
+    year = {2005},
+    pages = {825--834},
+    volume = {18},
+    doi = {10.1137/S0895480104440754}
+}
 @article{junn15,
     title = {{Optimal locating-total dominating sets in strips of height 3}},
     author = {V. Junnila},
@@ -863,6 +891,33 @@
     number = {2},
     doi = {10.1006/jctb.2001.2106}
 }
+@article{hora17,
+    title = {{A comparison of approaches for finding minimum identifying codes on graphs}},
+    author = {V. Horan and S. Adachi and S. Bak},
+    journal = {{Quantum Information Processing}},
+    year = {2016},
+    pages = {1827--1848},
+    volume = {15},
+    doi = {10.1007/s11128-016-1240-0}
+}
+@article{char02b,
+    title = {{Identifying and locating-dominating codes: NP-completeness results for directed graphs}},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {{IEEE Transactions on Information Theory}},
+    year = {2002},
+    pages = {2192--2200},
+    volume = {IT-48},
+    doi = {10.1109/TIT.2002.800490}
+}
+@article{garn93a,
+    title = {{Extremal graphs without three-cycles or four-cycles}},
+    author = {D. Garnick and Y. Kwong and F. Lazebnik},
+    journal = {{Journal of Graph Theory}},
+    year = {1993},
+    pages = {633--645},
+    volume = {17},
+    doi = {10.1002/jgt.3190170511}
+}
 @article{hudr15a,
     title = {{More results on the complexity of identifying problems in graphs}},
     author = {O. Hudry and A. Lobstein},
@@ -900,6 +955,14 @@
     number = {1},
     doi = {10.46298/dmtcs.574}
 }
+@article{give17,
+    title = {{Mixed-weight open locating-dominating sets}},
+    author = {R. Givens and R. Kincaid and W. Mao and G. Yu},
+    journal = {{Proceedings of 51st Annual Conference on Information Sciences and Systems (CISS)}},
+    year = {2017},
+    pages = {1--6},
+    doi = {10.1109/CISS.2017.7926110}
+}
 @article{grav05,
     title = {{Construction of codes identifying sets of vertices}},
     author = {S. Gravier and J. Moncel},
@@ -917,6 +980,33 @@
     pages = {507--518},
     volume = {67},
     doi = {10.1007/s12190-020-01482-w}
+}
+@article{hayn06,
+    title = {{Locating and total dominating sets in trees}},
+    author = {T. Haynes and M. Henning and J. Howard},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2006},
+    pages = {1293--1300},
+    volume = {154},
+    doi = {10.1016/j.dam.2006.01.002}
+}
+@article{honk04b,
+    title = {{Cycles identifying vertices and edges in binary hypercubes and 2-dimensional tori}},
+    author = {I. Honkala and M. Karpovsky and S. Litsyn},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2003},
+    pages = {409--419},
+    volume = {129},
+    doi = {10.1016/S0166-218X(02)00579-6}
+}
+@article{char05,
+    title = {{A linear algorithm for minimum 1-identifying codes in oriented trees}},
+    author = {I. Charon and S. Gravier and O. Hudry and A. Lobstein and M. Mollard and J. Moncel},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2006},
+    pages = {1246--1253},
+    volume = {154},
+    doi = {10.1016/j.dam.2005.11.007}
 }
 @article{henn12c,
     title = {{Locating-total domination in claw-free cubic graphs}},
@@ -979,6 +1069,24 @@
     pages = {1532--1546},
     volume = {160},
     doi = {10.1016/j.dam.2012.02.009}
+}
+@article{fouc11d,
+    title = {{Identifying codes in line graphs}},
+    author = {F. Foucaud and S. Gravier and R. Naserasr and A. Parreau and P. Valicov},
+    journal = {{Journal of Graph Theory}},
+    year = {2013},
+    pages = {425--448},
+    volume = {73},
+    doi = {10.1002/jgt.21686}
+}
+@article{honk04c,
+    title = {{On identifying codes in the hexagonal mesh}},
+    author = {I. Honkala and T. Laihonen},
+    journal = {{Information Processing Letters}},
+    year = {2004},
+    pages = {9--14},
+    volume = {89},
+    doi = {10.1016/j.ipl.2003.09.009}
 }
 @article{haka20k,
     title = {{The solid-metric dimension}},
@@ -1088,6 +1196,15 @@
     volume = {340},
     doi = {10.1016/j.disc.2017.02.002}
 }
+@article{laih02a,
+    title = {{Sequences of optimal identifying codes}},
+    author = {T. Laihonen},
+    journal = {{IEEE Transactions on Information Theory}},
+    year = {2002},
+    pages = {774--776},
+    volume = {IT-48},
+    doi = {10.1109/18.986043}
+}
 @article{fazl12,
     title = {{Connected identifying codes}},
     author = {N. Fazlollahi and D. Starobinski and A. Trachtenberg},
@@ -1096,6 +1213,33 @@
     pages = {4814--4824},
     volume = {IT-58},
     doi = {10.1109/TIT.2012.2191934}
+}
+@article{honk02c,
+    title = {{On the complexity of the identification problem in Hamming spaces}},
+    author = {I. Honkala and A. Lobstein},
+    journal = {{Acta Informatica}},
+    year = {2002},
+    pages = {839--845},
+    volume = {38},
+    doi = {10.1007/s00236-002-0093-4}
+}
+@article{karp99a,
+    title = {{On the covering of vertices for fault diagnosis in hypercubes}},
+    author = {M. Karpovsky and K. Chakrabarty and L. Levitin and D. Avresky},
+    journal = {{Information Processing Letters}},
+    year = {1999},
+    pages = {99--103},
+    volume = {69},
+    doi = {10.1016/S0020-0190(98)00199-9}
+}
+@article{more85,
+    title = {{On minimizing a set of tests}},
+    author = {B. Moret and H. Shapiro},
+    journal = {{SIAM Journal on Scientific and Statistical Computing}},
+    year = {1985},
+    pages = {983--1003},
+    volume = {6},
+    doi = {10.1137/0906067}
 }
 @article{fouc13,
     title = {{An improved lower bound for $(1, \leq 2)$-identifying codes in the king grid}},
@@ -1153,6 +1297,15 @@
     doi = {10.1016/j.disc.2010.07.006},
     author = {Justin Southey and Michael A. Henning}
 }
+@article{kim15,
+    title = {{Identifying codes and searching with balls in graphs}},
+    author = {Y. Kim and M. Kumbhat and Z. Nagy and B. Patk\'os and A. Pokrovskiy and M. Vizer},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2015},
+    pages = {39--47},
+    volume = {193},
+    doi = {10.1016/j.dam.2015.03.018}
+}
 @article{henn13,
     title = {{Distinguishing-transversal in hypergraphs and identifying open codes in cubic graphs}},
     author = {M. Henning and A. Yeo},
@@ -1171,6 +1324,15 @@
     pages = {331--349},
     year = {2024},
     doi = {10.3233/FI-242186}
+}
+@article{cohe99b,
+    title = {{New bounds for codes identifying vertices in graphs}},
+    author = {G. Cohen and I. Honkala and A. Lobstein and G. Z\'emor},
+    journal = {{Electronic Journal of Combinatorics}},
+    year = {1999},
+    volume = {6},
+    number = {1},
+    doi = {10.37236/1451}
 }
 @article{samp24,
     title = {{Density of identifying codes of hexagonal grids with finite number of rows}},
@@ -1191,6 +1353,43 @@
     publisher = {Wiley Online Library},
     doi = {10.1002/net.22254}
 }
+@article{omam14,
+    title = {{Locating total dominating sets in the join, corona and composition of graphs}},
+    author = {B. Omamalin and S. Canoy, Jr. and and H. Rara},
+    journal = {{Applied Mathematical Sciences (Ruse)}},
+    year = {2014},
+    pages = {2363--2374},
+    volume = {8},
+    number = {48},
+    doi = {10.12988/ams.2014.43205}
+}
+@article{fouc16a,
+    title = {{Locating-dominating sets in twin-free graphs}},
+    author = {F. Foucaud and M. Henning and C. L\"{o}wenstein and T. Sasse},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2016},
+    pages = {52--58},
+    volume = {200},
+    doi = {10.1016/j.dam.2015.06.038}
+}
+@article{henn12b,
+    title = {{Locating-total domination in graphs}},
+    author = {M. Henning and N. Rad},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2012},
+    pages = {1986--1993},
+    volume = {160},
+    doi = {10.1016/j.dam.2012.04.004}
+}
+@article{honk06f,
+    title = {{On robust and dynamic identifying codes}},
+    author = {I. Honkala and M. Karpovsky and L. Levitin},
+    journal = {{IEEE Transactions on Information Theory}},
+    year = {2006},
+    pages = {599--612},
+    volume = {IT-52},
+    doi = {10.1109/TIT.2005.862097}
+}
 @article{jean22,
     title = {{Extremal cubic graphs for fault-tolerant locating domination}},
     author = {D. Jean and S. Seo},
@@ -1209,6 +1408,15 @@
     volume = {43},
     number = {2},
     doi = {10.7151/dmgt.2374}
+}
+@article{junn09a,
+    title = {{Optimal identifying codes in cycles and paths}},
+    author = {V. Junnila and T. Laihonen},
+    journal = {{Graphs and Combinatorics}},
+    year = {2012},
+    pages = {469--481},
+    volume = {28},
+    doi = {10.1007/s00373-011-1058-6}
 }
 @article{jean23a,
     title = {{Progress on fault-tolerant locating-dominating sets}},
@@ -1229,6 +1437,42 @@
     pages = {106--125},
     doi = {10.1016/j.dam.2023.01.023}
 }
+@article{fouc17x,
+    title = {{Random subgraphs make identification affordable}},
+    author = {F. Foucaud and G. Perarnau and O. Serra},
+    journal = {{Journal of Combinatorics}},
+    year = {2017},
+    pages = {57--77},
+    volume = {8},
+    doi = {10.1007/978-88-7642-475-5_66}
+}
+@article{junn22JLL,
+    title = {{Improved lower bound for locating-dominating codes in binary Hamming spaces}},
+    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
+    journal = {{Designs, Codes and Cryptography}},
+    year = {2022},
+    pages = {67--85},
+    volume = {90},
+    doi = {10.1007/s10623-021-00963-8}
+}
+@article{rose04a,
+    title = {{On the identification problems in products of cycles}},
+    author = {P. Rosendahl},
+    journal = {{Discrete Mathematics}},
+    year = {2004},
+    pages = {277--288},
+    volume = {275},
+    doi = {10.1016/S0012-365X(03)00111-0}
+}
+@article{ghor20,
+    title = {{The watching system as a generalization of identifying code}},
+    author = {M. Ghorbani and M. Dehmer and H. Maimani and S. Maddah and M. Rooz\-bayani and F. Emmert-streib},
+    journal = {{Applied Mathematics and Computation}},
+    year = {2020},
+    pages = {7},
+    volume = {380},
+    doi = {10.1016/j.amc.2020.125302}
+}
 @article{jean24a,
     title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
     author = {D. Jean and S. Seo},
@@ -1248,6 +1492,30 @@
     pages = {23--40},
     doi = {10.61091/cn235-03}
 }
+@article{rahb19,
+    title = {{Bounds on the identifying codes in trees}},
+    author = {H. Rahbani and N. Rad and S. Mirrezaei},
+    journal = {{Graphs and Combinatorics}},
+    year = {2019},
+    pages = {599--609},
+    volume = {35},
+    doi = {10.1007/s00373-019-02018-1}
+}
+@article{hudr16,
+    title = {{Some results about a conjecture on identifying codes in complete suns}},
+    author = {O. Hudry and A. Lobstein},
+    journal = {{International Transactions in Operational Research}},
+    year = {2019},
+    pages = {732--746},
+    volume = {26},
+    doi = {10.1111/itor.12320}
+}
+
+
+
+
+
+
 
 
 
@@ -1634,14 +1902,6 @@
     pages = {119--128},
     volume = {241}
 }
-@article{blidC18,
-    title = {{Locating domination dot-critical graphs}},
-    author = {M. Blidia and M. Chellali},
-    journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
-    year = {2018},
-    pages = {121--141},
-    volume = {104}
-}
 @article{blid11,
     title = {{Characterizations of trees with unique minimum locating-dominating sets}},
     author = {M. Blidia and M. Chellali and R. Lounes and F. Maffray},
@@ -1839,14 +2099,6 @@
     pages = {491--501},
     volume = {31}
 }
-@article{char05,
-    title = {{A linear algorithm for minimum 1-identifying codes in oriented trees}},
-    author = {I. Charon and S. Gravier and O. Hudry and A. Lobstein and M. Mollard and J. Moncel},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2006},
-    pages = {1246--1253},
-    volume = {154}
-}
 @article{char00a,
     title = {{Identifying codes}},
     author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
@@ -1895,14 +2147,6 @@
     year = {2002},
     volume = {9},
     number = {1}
-}
-@article{char02b,
-    title = {{Identifying and locating-dominating codes: NP-completeness results for directed graphs}},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {{IEEE Transactions on Information Theory}},
-    year = {2002},
-    pages = {2192--2200},
-    volume = {IT-48}
 }
 @article{char03b,
     title = {{Minimizing the size of an identifying or locating-dominating code in a graph is NP-hard}},
@@ -1994,14 +2238,6 @@
     pages = {99--113},
     volume = {105}
 }
-@article{char02c,
-    title = {{The locating-chromatic number of a graph}},
-    author = {G. Chartrand and D. Erwin and M. Henning and P. Slater and P. Zhang},
-    journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
-    year = {2002},
-    pages = {89--101},
-    volume = {36}
-}
 @article{char03d,
     title = {{Graphs of order $n$ with locating-chromatic number $n-1$}},
     author = {G. Chartrand and D. Erwin and M. Henning and P. Slater and P. Zhang},
@@ -2042,14 +2278,6 @@
     pages = {87--98},
     volume = {2},
     number = {2}
-}
-@article{cohe99b,
-    title = {{New bounds for codes identifying vertices in graphs}},
-    author = {G. Cohen and I. Honkala and A. Lobstein and G. Z\'emor},
-    journal = {{Electronic Journal of Combinatorics}},
-    year = {1999},
-    volume = {6},
-    number = {1}
 }
 @article{cohe00a,
     title = {{Bounds for codes identifying vertices in the hexagonal grid}},
@@ -2174,14 +2402,6 @@
     pages = {97--112},
     volume = {202}
 }
-@article{exoo11,
-    title = {{Locating-dominating codes in cycles}},
-    author = {G. Exoo and V. Junnila and T. Laihonen},
-    journal = {{Australasian Journal of Combinatorics}},
-    year = {2011},
-    pages = {177--194},
-    volume = {49}
-}
 @article{exoo08c,
     title = {{Upper bounds for binary identifying codes}},
     author = {G. Exoo and V. Junnila and T. Laihonen and S. Ranto},
@@ -2285,14 +2505,6 @@
     pages = {343--348},
     volume = {38}
 }
-@article{fouc11d,
-    title = {{Identifying codes in line graphs}},
-    author = {F. Foucaud and S. Gravier and R. Naserasr and A. Parreau and P. Valicov},
-    journal = {{Journal of Graph Theory}},
-    year = {2013},
-    pages = {425--448},
-    volume = {73}
-}
 @article{fouc10a,
     title = {{On identifying codes and Bondy's theorem on ``induced subsets''}},
     author = {F. Foucaud and E. Guerrini and M. Kov$\check{\textrm{s}}$e and R. Naserasr and A. Parreau and P. Valicov},
@@ -2323,14 +2535,6 @@
     volume = {23},
     number = {3}
 }
-@article{fouc16a,
-    title = {{Locating-dominating sets in twin-free graphs}},
-    author = {F. Foucaud and M. Henning and C. L\"{o}wenstein and T. Sasse},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2016},
-    pages = {52--58},
-    volume = {200}
-}
 @article{fouc12,
     title = {{Locally identifying colourings for graphs with given maximum degree}},
     author = {F. Foucaud and I. Honkala and T. Laihonen and A. Parreau and G. Perarnau},
@@ -2338,15 +2542,6 @@
     year = {2012},
     pages = {1832--1837},
     volume = {312}
-}
-@article{fouc17q,
-    title = {{Parameterized and approximation complexity of the detection pair problem in graphs}},
-    author = {F. Foucaud and R. Klasing},
-    journal = {{Journal of Graph Algorithms and Applications}},
-    year = {2017},
-    pages = {1039--1056},
-    volume = {21},
-    number = {6}
 }
 @article{fouc16b,
     title = {{Algorithms and complexity for metric dimension and location-domination on interval and permutation graphs}},
@@ -2363,14 +2558,6 @@
     year = {2017},
     pages = {43--58},
     volume = {668}
-}
-@article{fouc17x,
-    title = {{Random subgraphs make identification affordable}},
-    author = {F. Foucaud and G. Perarnau and O. Serra},
-    journal = {{Journal of Combinatorics}},
-    year = {2017},
-    pages = {57--77},
-    volume = {8}
 }
 @article{fric07,
     title = {{Critical graphs with respect to vertex identification}},
@@ -2396,14 +2583,6 @@
     pages = {487--501},
     volume = {249}
 }
-@article{garn93a,
-    title = {{Extremal graphs without three-cycles or four-cycles}},
-    author = {D. Garnick and Y. Kwong and F. Lazebnik},
-    journal = {{Journal of Graph Theory}},
-    year = {1993},
-    pages = {633--645},
-    volume = {17}
-}
 @article{garn92a,
     title = {{Nonisomorphic extremal graphs without three-cycles or four-cycles}},
     author = {D. Garnick and N. Nieuwejaar},
@@ -2412,14 +2591,6 @@
     pages = {33--56},
     volume = {12}
 }
-@article{ghor20,
-    title = {{The watching system as a generalization of identifying code}},
-    author = {M. Ghorbani and M. Dehmer and H. Maimani and S. Maddah and M. Rooz\-bayani and F. Emmert-streib},
-    journal = {{Applied Mathematics and Computation}},
-    year = {2020},
-    pages = {7},
-    volume = {380}
-}
 @article{gimb01,
     title = {{Location with dominating sets}},
     author = {J. Gimbel and B. Van gorden and M. Nicolescu and C. Umstead and N. Vaiana},
@@ -2427,20 +2598,6 @@
     year = {2001},
     pages = {129--144},
     volume = {151}
-}
-@phdthesis{give18,
-    title = {{Mixed-weight open locating dominating sets}},
-    author = {R. Givens},
-    year = {2018},
-    school = {The College of William and Mary},
-    address = {Virginia, USA}
-}
-@article{give17,
-    title = {{Mixed-weight open locating-dominating sets}},
-    author = {R. Givens and R. Kincaid and W. Mao and G. Yu},
-    journal = {{Proceedings of 51st Annual Conference on Information Sciences and Systems (CISS)}},
-    year = {2017},
-    pages = {1--6}
 }
 @article{give20,
     title = {{Open-locating domination sets in circulant graphs}},
@@ -2459,14 +2616,6 @@
     pages = {97--106},
     volume = {85}
 }
-@article{gonz18,
-    title = {{Metric-locating-dominating sets of graphs for constructing related subsets of vertices}},
-    author = {A. Gonz\'alez and C. Hernando and M. Mora},
-    journal = {{Applied Mathematics and Computation}},
-    year = {2018},
-    pages = {449--456},
-    volume = {332}
-}
 @article{grap08,
     title = {{Un probl\`eme de surveillance : mod\'elisation et simulation avec la th\'eorie des jeux}},
     author = {R. Grappe and N. Brauner and J. Moncel},
@@ -2483,22 +2632,6 @@
     year = {2014},
     pages = {73--88},
     volume = {16}
-}
-@article{grav08,
-    title = {{Hardness results and approximation algorithms for identifying codes and locating-dominating codes in graphs}},
-    author = {S. Gravier and R. Klasing and J. Moncel},
-    journal = {{Algorithmic Operations Research}},
-    year = {2008},
-    pages = {43--50},
-    volume = {3}
-}
-@article{grav13,
-    title = {{New results on variants of covering codes in Sierpi\'nski graphs}},
-    author = {S. Gravier and M. Kov$\check{\textrm{s}}$e and M. Mollard and J. Moncel and A. Parreau},
-    journal = {{Designs, Codes and Cryptography}},
-    year = {2013},
-    pages = {181--188},
-    volume = {69}
 }
 @article{grav04,
     title = {{On graphs having a $V \setminus \{ x \}$ set as an identifying code}},
@@ -2572,22 +2705,6 @@
     pages = {246--256},
     volume = {95}
 }
-@article{hayn06,
-    title = {{Locating and total dominating sets in trees}},
-    author = {T. Haynes and M. Henning and J. Howard},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2006},
-    pages = {1293--1300},
-    volume = {154}
-}
-@article{henn12b,
-    title = {{Locating-total domination in graphs}},
-    author = {M. Henning and N. Rad},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2012},
-    pages = {1986--1993},
-    volume = {160}
-}
 @article{henn12,
     title = {{Identifying vertex covers in graphs}},
     author = {M. Henning and A. Yeo},
@@ -2611,19 +2728,6 @@
     year = {2019},
     pages = {195--203},
     volume = {263}
-}
-@mastersthesis{heyd18,
-    title = {{Location-domination in twin-free graphs and digraphs}},
-    author = {S. Heydarshahi},
-    journal = {{Universit\'e Paris Sorbonne}},
-    year = {2018}
-}
-@article{hiss13,
-    title = {{Identifying codes of Cartesian product of two cliques}},
-    author = {A. Hissoum and A. Semri},
-    journal = {{Proceedings of 2013 International Conf. on Applied Mathematics and Computational Methods}},
-    year = {2013},
-    pages = {104--108}
 }
 @article{hocq14,
     title = {{Adjacent vertex-distinguishing edge coloring of graphs with maximum degree $\Delta$}},
@@ -2656,38 +2760,6 @@
     year = {2004},
     pages = {303--323},
     volume = {8}
-}
-@article{honk06f,
-    title = {{On robust and dynamic identifying codes}},
-    author = {I. Honkala and M. Karpovsky and L. Levitin},
-    journal = {{IEEE Transactions on Information Theory}},
-    year = {2006},
-    pages = {599--612},
-    volume = {IT-52}
-}
-@article{honk04b,
-    title = {{Cycles identifying vertices and edges in binary hypercubes and 2-dimensional tori}},
-    author = {I. Honkala and M. Karpovsky and S. Litsyn},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2003},
-    pages = {409--419},
-    volume = {129}
-}
-@article{honk03c,
-    title = {{On identification of sets of vertices in the triangular grid}},
-    author = {I. Honkala and T. Laihonen},
-    journal = {{Proceedings of Workshop on Coding and Cryptography 2003}},
-    year = {2003},
-    pages = {265--271},
-    address = {Versailles, France}
-}
-@article{honk04c,
-    title = {{On identifying codes in the hexagonal mesh}},
-    author = {I. Honkala and T. Laihonen},
-    journal = {{Information Processing Letters}},
-    year = {2004},
-    pages = {9--14},
-    volume = {89}
 }
 @article{honk06c,
     title = {{On identifying codes in the king grid that are robust against edge deletions}},
@@ -2729,22 +2801,6 @@
     pages = {232--243},
     volume = {99}
 }
-@article{honk02c,
-    title = {{On the complexity of the identification problem in Hamming spaces}},
-    author = {I. Honkala and A. Lobstein},
-    journal = {{Acta Informatica}},
-    year = {2002},
-    pages = {839--845},
-    volume = {38}
-}
-@article{honk02f,
-    title = {{Identifying vertices in the $n$-cube}},
-    author = {I. Honkala and A. Lobstein},
-    journal = {{Proceedings of the 8th International Workshop on Algebraic and Combinatorial Coding Theory}},
-    year = {2002},
-    pages = {198--201},
-    address = {Tsarskoe Selo, Russia}
-}
 @article{honk03a,
     title = {{On identification in $Z^2$ using translates of given patterns}},
     author = {I. Honkala and A. Lobstein},
@@ -2755,14 +2811,6 @@
     volume = {9},
     number = {10}
 }
-@article{hora17,
-    title = {{A comparison of approaches for finding minimum identifying codes on graphs}},
-    author = {V. Horan and S. Adachi and S. Bak},
-    journal = {{Quantum Information Processing}},
-    year = {2016},
-    pages = {1827--1848},
-    volume = {15}
-}
 @mastersthesis{howa04,
     title = {{Locating and total dominating sets in trees}},
     author = {J. Howard},
@@ -2770,14 +2818,6 @@
     year = {2004},
     pages = {48},
     address = {Tennessee, USA}
-}
-@article{hudr16,
-    title = {{Some results about a conjecture on identifying codes in complete suns}},
-    author = {O. Hudry and A. Lobstein},
-    journal = {{International Transactions in Operational Research}},
-    year = {2019},
-    pages = {732--746},
-    volume = {26}
 }
 @article{inay21,
     title = {{The locating chromatic number of book graph}},
@@ -2842,14 +2882,6 @@
     pages = {335--343},
     volume = {159}
 }
-@article{junn09a,
-    title = {{Optimal identifying codes in cycles and paths}},
-    author = {V. Junnila and T. Laihonen},
-    journal = {{Graphs and Combinatorics}},
-    year = {2012},
-    pages = {469--481},
-    volume = {28}
-}
 @article{junn12b,
     title = {{Optimal lower bound for 2-identifying codes in the hexagonal grid}},
     author = {V. Junnila and T. Laihonen},
@@ -2891,22 +2923,6 @@
     pages = {3322--3341},
     volume = {67},
     number = {6}
-}
-@article{junn22JLL,
-    title = {{Improved lower bound for locating-dominating codes in binary Hamming spaces}},
-    author = {V. Junnila and T. Laihonen and T. Lehtil\"a},
-    journal = {{Designs, Codes and Cryptography}},
-    year = {2022},
-    pages = {67--85},
-    volume = {90}
-}
-@article{junn19c,
-    title = {{Location in circulant graphs}},
-    author = {V. Junnila and T. Laihonen and G. Paris},
-    journal = {{Proceedings of the Fourth Russian-Finnish Symposium on Discrete Mathematics}},
-    year = {2017},
-    pages = {81--84},
-    address = {Turku, Finland}
 }
 @article{junn19,
     title = {{Optimal bounds on codes for location in circulant graphs}},
@@ -2950,14 +2966,6 @@
     pages = {599--611},
     volume = {IT-44}
 }
-@article{karp99a,
-    title = {{On the covering of vertices for fault diagnosis in hypercubes}},
-    author = {M. Karpovsky and K. Chakrabarty and L. Levitin and D. Avresky},
-    journal = {{Information Processing Letters}},
-    year = {1999},
-    pages = {99--103},
-    volume = {69}
-}
 @article{kim05,
     title = {{How complex are random graphs in first order logic?}},
     author = {J. Kim and O. Pikhurko and J. Spencer and O. Verbitsky},
@@ -2973,14 +2981,6 @@
     year = {2010},
     pages = {93--102},
     volume = {59}
-}
-@article{kim15,
-    title = {{Identifying codes and searching with balls in graphs}},
-    author = {Y. Kim and M. Kumbhat and Z. Nagy and B. Patk\'os and A. Pokrovskiy and M. Vizer},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2015},
-    pages = {39--47},
-    volume = {193}
 }
 @article{kina18,
     title = {{Minimal locating-paired-dominating sets in triangular and king grids}},
@@ -3046,14 +3046,6 @@
     pages = {197--206},
     address = {Raleigh, North Carolina, USA}
 }
-@article{laih02a,
-    title = {{Sequences of optimal identifying codes}},
-    author = {T. Laihonen},
-    journal = {{IEEE Transactions on Information Theory}},
-    year = {2002},
-    pages = {774--776},
-    volume = {IT-48}
-}
 @article{laih02c,
     title = {{Optimal codes for strong identification}},
     author = {T. Laihonen},
@@ -3061,14 +3053,6 @@
     year = {2002},
     pages = {307--313},
     volume = {23}
-}
-@article{laih05b,
-    title = {{On optimal edge-robust and vertex-robust $(1,\leq\ell)$-identifying codes}},
-    author = {T. Laihonen},
-    journal = {{SIAM Journal on Discrete Mathematics}},
-    year = {2005},
-    pages = {825--834},
-    volume = {18}
 }
 @article{laih06a,
     title = {{Optimal $t$-edge-robust $r$-identifying codes in the king lattice}},
@@ -3119,14 +3103,6 @@
     publisher = {Springer-Verlag},
     pages = {82--91}
 }
-@article{laih07,
-    title = {{Codes identifying sets of binary words with large radii}},
-    author = {T. Laihonen and S. Ranto},
-    journal = {{Proceedings of Workshop on Coding and Cryptography 2007}},
-    year = {2007},
-    pages = {215--224},
-    address = {Versailles, France}
-}
 @article{laks00,
     title = {{Alarm placement in systems with fault propagation}},
     author = {K. Lakshmanan and D. Rosenkratz and S. Ravi},
@@ -3169,15 +3145,6 @@
     pages = {3268--3280},
     volume = {157}
 }
-@phdthesis{mcin19,
-    title = {{Domination and identification games in graphs}},
-    author = {F. Mc inerney},
-    month = {July},
-    year = {2019},
-    school = {Universit\'e C\^ote d'Azur},
-    pages = {157},
-    address = {Nice, France}
-}
 @article{madd21,
     title = {{New results of identifying codes in product graphs}},
     author = {S. Maddah and M. Ghorbani and M. Dehmer},
@@ -3185,14 +3152,6 @@
     year = {2021},
     pages = {7},
     volume = {410}
-}
-@article{manu11,
-    title = {{Locating and liar domination of circulant networks}},
-    author = {P. Manuel},
-    journal = {{Ars Combinatoria}},
-    year = {2011},
-    pages = {309--320},
-    volume = {101}
 }
 @article{mart10,
     title = {{Lower bounds for identifying codes in some infinite grids}},
@@ -3282,14 +3241,6 @@
     year = {2004},
     pages = {65--67}
 }
-@article{more85,
-    title = {{On minimizing a set of tests}},
-    author = {B. Moret and H. Shapiro},
-    journal = {{SIAM Journal on Scientific and Statistical Computing}},
-    year = {1985},
-    pages = {983--1003},
-    volume = {6}
-}
 @article{murt19,
     title = {{Locating-dominating sets of functigraphs}},
     author = {M. Murtaza and M. Fazil and I. Javaid},
@@ -3368,15 +3319,6 @@
     year = {2019},
     pages = {31--40},
     volume = {39}
-}
-@article{omam14,
-    title = {{Locating total dominating sets in the join, corona and composition of graphs}},
-    author = {B. Omamalin and S. Canoy, Jr. and and H. Rara},
-    journal = {{Applied Mathematical Sciences (Ruse)}},
-    year = {2014},
-    pages = {2363--2374},
-    volume = {8},
-    number = {48}
 }
 @article{omam14b,
     title = {{Differentiating total domination in graphs: Revisited}},
@@ -3508,14 +3450,6 @@
     year = {2018},
     pages = {455--462},
     volume = {38}
-}
-@article{rahb19,
-    title = {{Bounds on the identifying codes in trees}},
-    author = {H. Rahbani and N. Rad and S. Mirrezaei},
-    journal = {{Graphs and Combinatorics}},
-    year = {2019},
-    pages = {599--609},
-    volume = {35}
 }
 @article{rahb19q,
     title = {{A note on the complexity of locating-total domination in graphs}},
@@ -3697,14 +3631,6 @@
     year = {2003},
     volume = {10},
     number = {1}
-}
-@article{rose04a,
-    title = {{On the identification problems in products of cycles}},
-    author = {P. Rosendahl},
-    journal = {{Discrete Mathematics}},
-    year = {2004},
-    pages = {277--288},
-    volume = {275}
 }
 @article{savi18,
     title = {{The open-locating-dominating number of some convex polytopes}},
@@ -4568,4 +4494,113 @@
     number = {1},
     year = {2024},
     pages = {29--45}
+}
+@phdthesis{give18,
+    title = {{Mixed-weight open locating dominating sets}},
+    author = {R. Givens},
+    year = {2018},
+    school = {The College of William and Mary},
+    address = {Virginia, USA}
+}
+@article{honk03c,
+    title = {{On identification of sets of vertices in the triangular grid}},
+    author = {I. Honkala and T. Laihonen},
+    journal = {{Proceedings of Workshop on Coding and Cryptography 2003}},
+    year = {2003},
+    pages = {265--271},
+    address = {Versailles, France}
+}
+@article{honk02f,
+    title = {{Identifying vertices in the $n$-cube}},
+    author = {I. Honkala and A. Lobstein},
+    journal = {{Proceedings of the 8th International Workshop on Algebraic and Combinatorial Coding Theory}},
+    year = {2002},
+    pages = {198--201},
+    address = {Tsarskoe Selo, Russia}
+}
+@article{laih07,
+    title = {{Codes identifying sets of binary words with large radii}},
+    author = {T. Laihonen and S. Ranto},
+    journal = {{Proceedings of Workshop on Coding and Cryptography 2007}},
+    year = {2007},
+    pages = {215--224},
+    address = {Versailles, France}
+}
+@article{manu11,
+    title = {{Locating and liar domination of circulant networks}},
+    author = {P. Manuel},
+    journal = {{Ars Combinatoria}},
+    year = {2011},
+    pages = {309--320},
+    volume = {101}
+}
+@phdthesis{mcin19,
+    title = {{Domination and identification games in graphs}},
+    author = {F. Mc inerney},
+    month = {July},
+    year = {2019},
+    school = {Universit\'e C\^ote d'Azur},
+    pages = {157},
+    address = {Nice, France}
+}
+@article{junn19c,
+    title = {{Location in circulant graphs}},
+    author = {V. Junnila and T. Laihonen and G. Paris},
+    journal = {{Proceedings of the Fourth Russian-Finnish Symposium on Discrete Mathematics}},
+    year = {2017},
+    pages = {81--84},
+    address = {Turku, Finland}
+}
+@article{exoo11,
+    title = {{Locating-dominating codes in cycles}},
+    author = {G. Exoo and V. Junnila and T. Laihonen},
+    journal = {{Australasian Journal of Combinatorics}},
+    year = {2011},
+    pages = {177--194},
+    volume = {49}
+}
+@article{grav08,
+    title = {{Hardness results and approximation algorithms for identifying codes and locating-dominating codes in graphs}},
+    author = {S. Gravier and R. Klasing and J. Moncel},
+    journal = {{Algorithmic Operations Research}},
+    year = {2008},
+    pages = {43--50},
+    volume = {3}
+}
+@article{grav13,
+    title = {{New results on variants of covering codes in Sierpi\'nski graphs}},
+    author = {S. Gravier and M. Kov$\check{\textrm{s}}$e and M. Mollard and J. Moncel and A. Parreau},
+    journal = {{Designs, Codes and Cryptography}},
+    year = {2013},
+    pages = {181--188},
+    volume = {69}
+}
+@article{hiss13,
+    title = {{Identifying codes of Cartesian product of two cliques}},
+    author = {A. Hissoum and A. Semri},
+    journal = {{Proceedings of 2013 International Conf. on Applied Mathematics and Computational Methods}},
+    year = {2013},
+    pages = {104--108}
+}
+@article{char02c,
+    title = {{The locating-chromatic number of a graph}},
+    author = {G. Chartrand and D. Erwin and M. Henning and P. Slater and P. Zhang},
+    journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
+    year = {2002},
+    pages = {89--101},
+    volume = {36}
+}
+@mastersthesis{heyd18,
+    title = {{Location-domination in twin-free graphs and digraphs}},
+    author = {S. Heydarshahi},
+    journal = {{Universit\'e Paris Sorbonne}},
+    year = {2018}
+}
+@article{blidC18,
+    title = {{Locating domination dot-critical graphs}},
+    author = {M. Blidia and M. Chellali},
+    journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
+    year = {2018},
+    pages = {121--141},
+    volume = {104}
 }
